--- a/package.json
+++ b/package.json
@@ -2,21 +2,22 @@
   "name": "@aloompa/jenkins-trigger",
   "version": "1.0.0",
   "description": "",
-  "main": "./handler.js",
+  "main": "./jenkinsTrigger.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "sls offline start"
+    "start": "STAGE=dev sls offline start",
+    "deploy": "STAGE=dev serverless deploy"
   },
   "author": "Aloompa",
   "license": "Unlicense",
   "dependencies": {
-    "body-parser": "^1.18.2",
-    "cors": "^2.8.4",
-    "express": "^4.16.3",
-    "request": "^2.85.0",
-    "serverless-http": "^1.5.3"
+    "body-parser": "1.18.2",
+    "bugsnag": "^2.3.1",
+    "express": "4.16.3",
+    "request": "2.85.0",
+    "serverless-http": "1.5.3"
   },
   "devDependencies": {
-    "serverless-offline": "^3.18.0"
+    "serverless-offline": "3.16.0"
   }
 }
